# hst_indic

./: .env.example  .gitattributes  .gitignore  INTEGRATION_TEST_RESULTS.md  LICENSE  README.md  pyproject.toml  requirements_gpu.txt
config/: config.yaml
data/dictionaries/: sample_sanskrit.csv
data/raw/: sample_sanskrit.txt  test_sample.txt
docs/: AWS_SETUP_GUIDE.md  ENHANCEMENT_ROADMAP.md  IMPLEMENTATION_SPEC.md  IMPROVEMENTS_TODAY.md  PATH_TO_98_PERCENT.md  SPRINT_TO_95_PERCENT.md  training_comparison.md
scripts/: convert_external_datasets.py  create_doping_experiments.py  download_sandhiset.py  extract_from_dcs_conllu.py  extract_sandhikosh_data.py  inference_byt5_sandhi.py  monitor_training.sh  parse_mw_dictionary.py  process_sanskrit_text.py  run_all_doping_experiments.sh  train_byt5_accuracy.py  train_byt5_fast.py  train_byt5_low_memory.py  train_doping_experiment.py  verify_training_data.py
src/annotators/sandhi/: detector.py  enhanced_detector.py  heritage_api.py  storage.py
src/database/: connection.py  models.py  operations.py  schema.sql
src/preprocessing/: dictionary.py  download_dictionaries.py
tests/: benchmark_full.py  benchmark_parallel.py  test_dictionary.py  test_enhanced_detector.py  test_real_sanskrit.py  test_sandhikosh_integration.py  test_storage_integration.py
